--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "12.1.0",
+    "@angular/common": "12.2.3",
+    "@angular/compiler": "12.1.0",
+    "@angular/compiler-cli": "12.2.3",
+    "@angular/core": "12.2.3",
+    "@angular/forms": "^12.2.3",
+    "@angular/localize": "12.2.3",
+    "@angular/platform-browser": "12.2.3",
+    "@angular/platform-browser-dynamic": "12.2.3",
+    "@angular/router": "12.2.3",
+    "@ng-bootstrap/ng-bootstrap": "10.0.0",
+    "@popperjs/core": "2.9.3",
+    "bootstrap": "5.1.0",
+    "rxjs": "7.1.0",
+    "tslib": "2.3.0",
+    "typescript": "4.3.5",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.0",
