--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "@angular/compiler": "12.1.0",
     "@angular/compiler-cli": "12.2.3",
     "@angular/core": "12.2.3",
-    "@angular/forms": "^12.2.3",
+    "@angular/forms": "12.2.3",
     "@angular/localize": "12.2.3",
     "@angular/platform-browser": "12.2.3",
     "@angular/platform-browser-dynamic": "12.2.3",
     "@angular/router": "12.2.3",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
-    "@popperjs/core": "2.9.3",
-    "bootstrap": "5.1.0",
+    "@popperjs/core": "^2.9.3",
+    "bootstrap": "^5.1.0",
     "rxjs": "7.1.0",
     "tslib": "2.3.0",
     "typescript": "4.3.5",
