--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "rxjs": "7.1.0",
     "tslib": "2.3.0",
     "typescript": "4.3.5",
-    "zone.js": "0.11.4"
+    "zone.js": "0.11.4",
+    "@angular/material": "~12.2.3",
+    "@angular/cdk": "~12.2.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.0",
