--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "12.1.0",
+    "@angular/common": "^12.2.4",
+    "@angular/compiler": "12.1.0",
+    "@angular/core": "^12.2.4",
+    "@angular/forms": "^12.2.4",
+    "@angular/platform-browser": "^12.2.4",
+    "@angular/platform-browser-dynamic": "^12.2.4",
+    "@angular/router": "12.1.0",
+    "rxjs": "7.1.0",
+    "tslib": "2.3.0",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.0",
