--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@angular/router": "12.1.0",
     "rxjs": "7.1.0",
     "tslib": "2.3.0",
-    "zone.js": "0.11.4"
+    "zone.js": "0.11.4",
+    "bootstrap": "~5.1.0",
+    "@ng-bootstrap/ng-bootstrap": "~10.0.0",
+    "@angular/localize": "~12.2.3",
+    "@angular/material": "~12.2.3",
+    "@angular/cdk": "~12.2.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.0",
